--- a/codeBet/page_2/ZA_bumpingBall3D.html
+++ b/codeBet/page_2/ZA_bumpingBall3D.html
@@ -63,7 +63,7 @@
     <main>
     </main>
     <div class="cot">
-        <h1>康托尔集</h1>
+        <h1>bumping ball</h1>
         <hr>
         <hr>
         <p>递归</p>
