--- a/mainPage/mainPage_2.html
+++ b/mainPage/mainPage_2.html
@@ -13,9 +13,9 @@
                 addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
                 addComponents(2,"BA_fractalCircle1",2,"分形圆","递归应用","P5.js,the nature of code");
                 addComponents(2,"BB_fractalCircle2",2,"分形圆2","递归应用","P5.js,the nature of code");
-                addComponents(2,"BC_cantorSet",2,"康托尔集","递归应用","P5.js,the nature of code");
+                //addComponents(2,"BC_cantorSet",2,"康托尔集","递归应用","P5.js,the nature of code");
                 addComponents(2,"BD_kochLine",2,"Koch曲线","递归+外部函数","P5.js,the nature of code");
-                //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
+                addComponents(2,"BF_FractalTree",2,"分型树","移动鼠标改变旋转角","P5.js,the nature of code");
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
