--- a/codeBet/page_2/BF_FractalTree.html
+++ b/codeBet/page_2/BF_FractalTree.html
@@ -59,7 +59,7 @@
     <main>
     </main>
     <div class="cot">
-        <h1>分型树</h1>
+        <h1>分形树</h1>
         <hr>
         <hr>
         <p>移动鼠标改变旋转角</p>
