--- a/codeBet/page_1/DDF_RenderingSmokeUsingParticleSystem.html
+++ b/codeBet/page_1/DDF_RenderingSmokeUsingParticleSystem.html
@@ -83,7 +83,7 @@
         function setup() {
             createCanvas(windowWidth, windowHeight);
             smooth();
-            img=loadImage("supportPictures/DDF_pngUsed.png");
+            img=loadImage("../supportPictures/DDF_pngUsed.png");
             floatForce=createVector(0,-0.6);
             particleSystem=new ParticleSystem(width/2,height*4/5);
         }
