--- a/mainPage/mainPage_2.html
+++ b/mainPage/mainPage_2.html
@@ -17,7 +17,7 @@
                 addComponents(2,"BD_kochLine",2,"Koch曲线","递归+外部函数","P5.js,the nature of code");
                 addComponents(2,"BF_FractalTree",2,"分形树","移动鼠标改变旋转角","P5.js,the nature of code");
                 addComponents(2,"BG_FractalTreeWithRandom",2,"分形树","带有随机性的","P5.js,the nature of code");
-                //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
+                addComponents(2,"BH_Lsysten",2,"L系统","可定制规则集","P5.js,the nature of code");
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
