--- a/codeBet/page_2/BH_Lsysten.html
+++ b/codeBet/page_2/BH_Lsysten.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../ico/ico1.jpg">
-    <title>分形树</title>
+    <title>Lsysten</title>
     <link rel="stylesheet" type="text/css" href="div_cot.css">
     <style>
         body {
