--- a/codeBet/page_2/BH_Lsysten.html
+++ b/codeBet/page_2/BH_Lsysten.html
@@ -27,6 +27,9 @@
         #init{
             margin-left: 0;
         }
+        .cot #output{
+            font-size: 1px;
+        }
     </style>
     <script src="../../p5.min.js"></script>
     <script>
