--- a/codeBet/page_2/BI_evlution.html
+++ b/codeBet/page_2/BI_evlution.html
@@ -69,6 +69,7 @@
     </style>
     <script src="../../p5.min.js"></script>
     <script>
+        //jhgjhgjhgjhg
         var population=[];
         var matingPool=[];
         var target="";
