--- a/mainPage/mainPage_1.html
+++ b/mainPage/mainPage_1.html
@@ -90,7 +90,7 @@
         <section class="foot_section">
             <p class="footInnerText_p">AC studio</p>
             <p class="footInnerApm_p"><span>idolic</span> and <span>practical</span></p>
-            <p class="footInnerApm_p">by VezzzingQAQ</p>
+            <p class="footInnerApm_p">by VezzzingQAQ <a class="aboutAuthor_a" href="../about/aboutAuthor.html">about</a></p>
         </section>
     </body>
 </html>
