--- a/mainPage/mainPage_2.html
+++ b/mainPage/mainPage_2.html
@@ -19,6 +19,10 @@
                 addComponents(2,"BG_FractalTreeWithRandom",2,"分形树","带有随机性的","P5.js,the nature of code");
                 addComponents(2,"BH_Lsysten",2,"L系统","可定制规则集","P5.js,the nature of code");
                 addComponents(2,"BI_evlution",2,"进化算法","generation1","P5.js,the nature of code");
+                addComponents(2,"CAA_MandelbrotSet",3,"曼德博集合基本","导函数上色","P5.js");
+                addComponents(2,"CAB_MandelbrotSetDisplay",3,"复数逃逸","曼德博集合的底层原理","P5.js");
+                addComponents(2,"CAC_MendelbrotSetFX",3,"佛像分型","曼德博集合保留路径","P5.js");
+
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
                 //exp
@@ -46,7 +50,7 @@
         <section class="foot_section">
             <p class="footInnerText_p">AC studio</p>
             <p class="footInnerApm_p"><span>idolic</span> and <span>practical</span></p>
-            <p class="footInnerApm_p">by VezzzingQAQ</p>
+            <p class="footInnerApm_p">by VezzzingQAQ <a class="aboutAuthor_a" href="../about/aboutAuthor.html">about</a></p>
         </section>
     </body>
 </html>
