--- a/about/aboutAuthor.html
+++ b/about/aboutAuthor.html
@@ -58,6 +58,9 @@
                 <p class="plan stage2">->blender->unity3D->ue4</p>
                 <h3 class="stage1">课业</h3>
                 <p class="stage2">格物->人文调研->造型?->界面设计->形式->人文调研->运动->空间营造</p>
+                <p class="stage2">......</p>
+                <p class="stage2">俺的github账号:<a href="https://github.com/vezzzingQAQ" target="_blank">https://github.com/vezzzingQAQ</a></p>
+                <p class="stage2">欢迎来点个小星星\(￣︶￣*\))</p>
             </div>
         </section>
         <a href="../mainPage/mainPage_1.html" class="return">←回主页</a>
