add piano and escape game

--- a/mainPage/mainPage_3.html
+++ b/mainPage/mainPage_3.html
@@ -13,7 +13,6 @@
                 addComponents(3,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
                 addComponents(3,"BA_fractalCircle1",2,"分形圆","递归应用","P5.js,the nature of code");
                 addComponents(3,"BB_fractalCircle2",2,"分形圆2","递归应用","P5.js,the nature of code");
-                //addComponents(3,"BC_cantorSet",2,"康托尔集","递归应用","P5.js,the nature of code");
                 addComponents(3,"BD_kochLine",2,"Koch曲线","递归+外部函数","P5.js,the nature of code");
                 addComponents(3,"BF_FractalTree",2,"分形树","移动鼠标改变旋转角","P5.js,the nature of code");
                 addComponents(3,"BG_FractalTreeWithRandom",2,"分形树","带有随机性的","P5.js,the nature of code");
@@ -22,8 +21,8 @@
                 addComponents(3,"CAA_MandelbrotSet",3,"曼德博集合基本","导函数上色","P5.js");
                 addComponents(3,"CAB_MandelbrotSetDisplay",3,"复数逃逸","曼德博集合的底层原理","P5.js");
                 addComponents(3,"CAC_MendelbrotSetFX",3,"佛像分型","曼德博集合保留路径","P5.js");
-
-                //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
+                addComponents(3,"CBA_piano/piano",3,"键钢","真正的电钢","PureH5");
+                addComponents(3,"CCA_escape1/about",3,"圆的逃亡","鼠标左右键改变加速度","P5.js");
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
                 //exp
                 //addPage
