--- a/codeBet/page_3/CCA_escape1/about.html
+++ b/codeBet/page_3/CCA_escape1/about.html
@@ -143,27 +143,7 @@
     <div class="parat">
         <div class="contain">
             <p>它最后明白,最可怕的,是自己的同类......</p>
-            <p>但是它又与它们有着道不清的联系......</p>
-            <br>
-            <p>它想逃离它们,太难了</p>
-            <p>它明明看到自己与它们之间数不清的联系</p>
-            <p>这个结构太可怕了,它像是落入蛛网的虫儿</p>
-            <p>但是它想着,当他挣脱一切联系之后的生活</p>
-            <p>那片空间,无限大......</p>
-            <br>
-            <p>作为纯粹的几何,它不能移动自己</p>
-            <p>但它掌握了改变力场方向的大法</p>
-            <p>它的心中燃起希望</p>
-            <br>
-            <p>当它做出逃离的决定的时候</p>
-            <p>它已经成为了异类</p>
-            <p>于是它走投无路</p>
-            <p>回避所谓的同类</p>
-            <p>从此踏上征程</p>
-            <br>
-            <p>但它结识了所谓的异类</p>
-            <p>它们愿意帮助它</p>
-            <p>它幻想着新的生活......</p>
+            <h1>体制之外</h1>
             <p></p>
         </div>
         <div class="contain">
