--- a/about/aboutAuthor.html
+++ b/about/aboutAuthor.html
@@ -40,8 +40,8 @@
                 display: none;
             }
         </style>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>        
-        <script type="text/javascript" class="231">
+        <script src="support/jquery.js"></script>
+        <script>
             $(function(){
                 $(".stage2").slideDown(1000);
                 $(".return").fadeIn(1000);
