game and double osci

--- a/about/aboutAuthor.html
+++ b/about/aboutAuthor.html
@@ -73,9 +73,9 @@
                 <p class="stage2">欢迎来点个小星星\(￣︶￣*\))</p>
                 <img class="Picture stage2" src="pictures/bottom1.jpg">
                 <h3 class="stage1">怎么联系俺</h3>
-                <p class="stage2">扫这个加我好友↓</p>
+                <p class="stage2">微信扫这个加我好友↓</p>
                 <img class="PictureSmall stage2" src="pictures/add.jpg">
-                <p class="stage2">扫这个请我吃饭↓</p>
+                <p class="stage2">微信扫这个请我吃饭↓</p>
                 <img class="PictureSmall stage2" src="pictures/pay.jpg">
             </div>
         </section>
