--- a/mainPage/mainPage_1.html
+++ b/mainPage/mainPage_1.html
@@ -64,5 +64,8 @@
             <p class="footInnerApm_p"><span>idolic</span> and <span>practical</span></p>
             <p class="footInnerApm_p">by VezzzingQAQ <a class="aboutAuthor_a" href="../about/aboutAuthor.html">about</a></p>
         </section>
+        <section class="footfoot_section">
+            <p>M a v e n S t u d i o</p>
+        </section>
     </body>
 </html>
