--- a/mainPage/mainPage_3.html
+++ b/mainPage/mainPage_3.html
@@ -23,6 +23,8 @@
                 addComponents(3,"CAC_MendelbrotSetFX",3,"佛像分型","曼德博集合保留路径","P5.js");
                 addComponents(3,"CBA_piano/piano",3,"键钢","真正的电钢","PureH5");
                 addComponents(3,"CCA_escape1/about",3,"圆的逃亡","鼠标左右键改变加速度","P5.js");
+                addComponents(3,"CCB_spacewarsanfbox/main",3,"B-O-X","试试看远古形式","P5.js");
+
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
                 //exp
                 //addPage
