--- a/about/aboutAuthor.html
+++ b/about/aboutAuthor.html
@@ -13,11 +13,11 @@
                 max-width: 50em;
                 font-family: Arial, 微软雅黑，"Microsoft yahei", "Hiragino Sans GB", "冬青黑体简体中文 w3", STXihei, 华文细黑, SimSun, 宋体, Heiti, 黑体, sans-serif;
                 width: 100vw;
-                background-color: rgb(235,235,235);
+                background-color: rgb(255, 255, 255);
             }
             h2,h3{
                 margin-top: 1em;
-                background-color: white;
+                background-color: rgb(245, 245, 245);
                 position: relative;
                 border-left:5px blueviolet solid;
                 padding-left: 5px;
