--- a/mainPage/mainPage_1.html
+++ b/mainPage/mainPage_1.html
@@ -40,6 +40,9 @@
                 addComponents(1,"DCD_polarCoordinates",3,"极坐标转换","转换笛卡尔坐标和极坐标","P5.js,the nature of code");
                 //addPage
                 addPages(4,1);
+
+                scrollAnimate()
+
             }
         </script>
         <script src="support/bannerP5_1.js"></script>
