--- a/mainPage/mainPage_2.html
+++ b/mainPage/mainPage_2.html
@@ -40,6 +40,9 @@
                 addComponents(2,"DFF_ca2DcellClass",3,"面向对象的CA","颜色显示历史","P5.js,the nature of code");
                 //addPage
                 addPages(4,2);
+                
+                scrollAnimate()
+
             }
         </script>
         <script src="support/bannerP5_2.js"></script>
