--- a/mainPage/mainPage_3.html
+++ b/mainPage/mainPage_3.html
@@ -29,6 +29,9 @@
                 //exp
                 //addPage
                 addPages(4,3);
+
+                scrollAnimate()
+
             }
         </script>
         <script src="support/bannerP5_3.js"></script>
