--- a/mainPage/mainPage_3.html
+++ b/mainPage/mainPage_3.html
@@ -24,6 +24,8 @@
                 addComponents(3,"CBA_piano/piano",3,"键钢","真正的电钢","PureH5");
                 addComponents(3,"CCA_escape1/about",3,"圆的逃亡","鼠标左右键改变加速度","P5.js");
                 addComponents(3,"CCB_spacewarsanfbox/main",3,"B-O-X","试试看远古形式","P5.js");
+                addComponents(3,"CDA_3n1problem",3,"3N+1猜想","*3+1&/2","P5.js");
+
 
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
                 //exp
