--- a/codeBet/page_3/CCA_escape1/CCA_escape1.html
+++ b/codeBet/page_3/CCA_escape1/CCA_escape1.html
@@ -3,6 +3,7 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="ico/ico1.jpg">
     <title>escape</title>
     <style>
         body {
@@ -329,8 +330,8 @@
                     }
                     this.blockList[i].display();
                     if(this.blockList[i].checkBump(this.player)){
-                        if(this.player.score>=1){
-                            this.player.score-=1;
+                        if(this.player.score>=2){
+                            this.player.score-=2;
                             this.shakingTime=0;
                             this.isShaking=true;
                         }else{
