--- a/codeBet/page_3/CCB_spacewarsanfbox/main.html
+++ b/codeBet/page_3/CCB_spacewarsanfbox/main.html
@@ -14,12 +14,11 @@
             position: fixed;
             left: 10px;
             top: 10px;
-            background-color: rgba(255,255,255,0.5);
             z-index: 10001;
             border-radius: 3px;
             padding: 2px;
             text-decoration: none;
-            color: rgb(128, 0, 117);
+            color: rgb(250, 250, 250);
         }
         main{
             pointer-events: none;
@@ -53,6 +52,8 @@
         }
         document.oncontextmenu = stop;
     </script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+-->
     <script src="../../../p5.min.js"></script>
     <script>
         var gm=null;
@@ -720,5 +721,7 @@
         <h1>Boommmmmm!!!!..</h1>
         <p><span></span>F5一键重生</p>
     </div>
+    <a href="../../../mainPage/mainPage_3.html">返回</a>
+
     </body>
 </html>
