--- a/about/aboutAuthor.html
+++ b/about/aboutAuthor.html
@@ -34,6 +34,9 @@
         <link rel="icon" type="image/x-icon" href="ico/ico1.jpg">
         <title>vezzzingQAQ</title>
         <style>
+            ::-webkit-scrollbar{
+                display: none;
+            }
             body{
                 margin: 0 auto;
                 line-height: 1.75;
