--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="ico/ico1.jpg">
         <title>AC studio</title>
+        <style>
+            a{
+                width: 100vw;
+                line-height: 100vh;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <a href="mainPage/mainPage_1.html">enter</a>
