about and pages

--- a/about/aboutAuthor.html
+++ b/about/aboutAuthor.html
@@ -108,6 +108,12 @@
                 <img class="PictureSmall stage2" src="pictures/add.jpg">
                 <p class="stage2">微信扫这个请我吃饭↓</p>
                 <img class="PictureSmall stage2" src="pictures/pay.jpg">
+                <h3 class="stage1">关于这个网站</h3>
+                <p class="stage2">移动端有些程序可能界面会崩(○´･д･)ﾉ</p>
+                <p class="stage2">懒得写适配了嗯嘛</p>
+                <p class="stage2">这里放一些我写的在线版本的小案例</p>
+                <p class="stage2">主要是JavaScript,到目前为止主要用了P5.js的库【毕竟国美可是要学processing的(ﾉ*･ω･)ﾉ】</p>
+                <p class="stage2"><a href="https://p5js.org/zh-Hans/" target="_blank">P5.js官网传送门</a></p>
             </div>
         </section>
         <a href="../mainPage/mainPage_1.html" class="return">←回主页</a>
