--- a/about/aboutAuthor.html
+++ b/about/aboutAuthor.html
@@ -114,6 +114,7 @@
                 <p class="stage2">这里放一些我写的在线版本的小案例</p>
                 <p class="stage2">主要是JavaScript,到目前为止主要用了P5.js的库【毕竟国美可是要学processing的(ﾉ*･ω･)ﾉ】</p>
                 <p class="stage2"><a href="https://p5js.org/zh-Hans/" target="_blank">P5.js官网传送门</a></p>
+                <p class="stage2"></p>
             </div>
         </section>
         <a href="../mainPage/mainPage_1.html" class="return">←回主页</a>
