--- a/mainPage/mainPage_3.html
+++ b/mainPage/mainPage_3.html
@@ -26,7 +26,8 @@
                 addComponents(3,"CCB_spacewarsanfbox/main",3,"B-O-X","试试看远古形式","P5.js");
                 addComponents(3,"CDA_3n1problem",3,"3N+1猜想","*3+1&/2","P5.js");
                 addComponents(3,"CDB_BumpingBall",3,"碰撞的球","纯碰撞物理解决方案","P5.js");
-
+                addComponents(3,"CDC_RejectionBall",3,"排斥的球","移动鼠标改变排斥力大小","P5.js");
+                addComponents(3,"CDD_RejectionAndAttractBall",3,"动力流体","排斥&吸引","P5.js");
 
 
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
