--- a/mainPage/mainPage_3.html
+++ b/mainPage/mainPage_3.html
@@ -59,7 +59,7 @@
         <section class="foot_section">
             <p class="footInnerText_p">AC studio</p>
             <p class="footInnerApm_p"><span>idolic</span> and <span>practical</span></p>
-            <p class="footInnerApm_p">by VezzzingQAQ <a class="aboutAuthor_a" href="../about/aboutAuthor.html">about</a></p>
+            <p class="footInnerApm_p">by VezzzingQAQ <a class="aboutAuthor_a" href="https://vezzzingqaq.github.io/aboutVezzzing/about/aboutAuthor.html">about</a></p>
         </section>
     </body>
 </html>
