--- a/mainPage/mainPage_3.html
+++ b/mainPage/mainPage_3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/x-icon" href="ico/ico1.jpg">
+        <link rel="icon" type="image/x-icon" href="../codeBet/ico/ico1.jpg">
         <title>AC studio</title>
         <script src="../p5.min.js"></script>
         <script src="support/support.js"></script>
@@ -28,6 +28,12 @@
                 addComponents(3,"CDB_BumpingBall",3,"碰撞的球","纯碰撞物理解决方案","P5.js");
                 addComponents(3,"CDC_RejectionBall",3,"排斥的球","移动鼠标改变排斥力大小","P5.js");
                 addComponents(3,"CDD_RejectionAndAttractBall",3,"动力流体","排斥&吸引","P5.js");
+                addComponents(3,"CDE_box2dhw",3,"B2D你好世界","box2dhtml5库","P5.js,the nature of code");
+                addComponents(3,"CDF_box2dBoundary",3,"B2D固定体","Boundary","P5.js,the nature of code");
+                addComponents(3,"CDG_box2dChainShape",3,"B2D曲线边界","Surface","P5.js,the nature of code");
+                addComponents(3,"CDH_box2dVertexShape",3,"B2D自定义形状","CustomShape","P5.js,the nature of code");
+                addComponents(3,"CDI_box2dConnectedShape",3,"B2D连接的形状","相当于卡bug?","P5.js,the nature of code");
+
 
 
                 //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
