--- a/codeBet/page_3/CDA_3n1problem.html
+++ b/codeBet/page_3/CDA_3n1problem.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="ico/ico1.jpg">
+    <link rel="icon" type="image/x-icon" href="../ico/ico1.jpg">
     <title>3N+1 problem</title>
     <style>
         body {
