--- a/mainPage/mainPage_2.html
+++ b/mainPage/mainPage_2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/x-icon" href="ico/ico1.jpg">
+        <link rel="icon" type="image/x-icon" href="../codeBet/ico/ico1.jpg">
         <title>AC studio</title>
         <script src="../p5.min.js"></script>
         <script src="support/support.js"></script>
