--- a/mainPage/mainPage_3.html
+++ b/mainPage/mainPage_3.html
@@ -33,6 +33,10 @@
                 addComponents(3,"CDG_box2dChainShape",3,"B2D曲线边界","Surface","P5.js,the nature of code");
                 addComponents(3,"CDH_box2dVertexShape",3,"B2D自定义形状","CustomShape","P5.js,the nature of code");
                 addComponents(3,"CDI_box2dConnectedShape",3,"B2D连接的形状","相当于卡bug?","P5.js,the nature of code");
+                addComponents(3,"CDJ_box2djoint",3,"B2D距离关节","Pair物体","P5.js,the nature of code");
+                addComponents(3,"CDK_box2dJoint2",3,"B2D制造绳索","B2D距离关节","P5.js,the nature of code");
+                addComponents(3,"CDL_box2dRotater",3,"B2D旋转关节","风车类","P5.js,the nature of code");
+
 
 
 
